// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFeild Test renders correctly 1`] = `
<View>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#CDCDE0",
        },
        {
          "fontFamily": "Poppins-Medium",
        },
      ]
    }
    testID="label"
  >
    test label
  </Text>
  <View
    onBlur={[Function]}
    onFocus={[Function]}
    style={
      [
        {
          "width": "100%",
        },
        {
          "height": 64,
        },
        {
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        {
          "backgroundColor": "#1E1E2D",
        },
        {
          "borderBottomLeftRadius": 16,
          "borderBottomRightRadius": 16,
          "borderTopLeftRadius": 16,
          "borderTopRightRadius": 16,
        },
        {
          "borderBottomWidth": 2,
          "borderLeftWidth": 2,
          "borderRightWidth": 2,
          "borderTopWidth": 2,
        },
        {
          "borderBottomColor": "#232533",
          "borderLeftColor": "#232533",
          "borderRightColor": "#232533",
          "borderTopColor": "#232533",
        },
        {
          "display": "flex",
        },
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
        [
          {
            "marginTop": 8,
          },
        ],
      ]
    }
  >
    <TextInput
      secureTextEntry={false}
      style={
        [
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          {
            "color": "#fff",
          },
          {
            "fontFamily": "Poppins-SemiBold",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`formfield tests renders label 1`] = `
<View>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#CDCDE0",
        },
        {
          "fontFamily": "Poppins-Medium",
        },
      ]
    }
    testID="label"
  >
    test label
  </Text>
  <View
    onBlur={[Function]}
    onFocus={[Function]}
    style={
      [
        {
          "width": "100%",
        },
        {
          "height": 64,
        },
        {
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        {
          "backgroundColor": "#1E1E2D",
        },
        {
          "borderBottomLeftRadius": 16,
          "borderBottomRightRadius": 16,
          "borderTopLeftRadius": 16,
          "borderTopRightRadius": 16,
        },
        {
          "borderBottomWidth": 2,
          "borderLeftWidth": 2,
          "borderRightWidth": 2,
          "borderTopWidth": 2,
        },
        {
          "borderBottomColor": "#232533",
          "borderLeftColor": "#232533",
          "borderRightColor": "#232533",
          "borderTopColor": "#232533",
        },
        {
          "display": "flex",
        },
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
        [
          {
            "marginTop": 8,
          },
        ],
      ]
    }
  >
    <TextInput
      secureTextEntry={false}
      style={
        [
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          {
            "color": "#fff",
          },
          {
            "fontFamily": "Poppins-SemiBold",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
        ]
      }
      testID="input"
    />
  </View>
</View>
`;
